--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,29 +1,140 @@
-<!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <style>
+            table, th , td {
+                border: 1px solid grey;
+                border-collapse: collapse;
+                padding: 5px;
+            }
+            table tr:nth-child(odd) {
+                background-color: #f1f1f1;
+            }
+            table tr:nth-child(even) {
+                background-color: #ffffff;
+            }
+            
+        </style>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>        
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI77onKHBURMe_IFrsG1tpoeJk6Q_CC2o"> </script>
+        <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+        <script type='text/javascript'>
+        var xmlhttp = new XMLHttpRequest();
+        var url = "http://localhost:3000/welcome/datasend";
+        var myArr;
+        var male ;
+        var female;
+        
+        $(document).ready(function(){
 
-<form id="frm1" action="form_action.asp">
-  First name: <input type="text" name="fname" value=""><br>
-  Last name: <input type="text" name="lname" value=""><br><br>
-</form> 
+            $('#button1').click(function(){
+            
+               if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                    myArr = JSON.parse(xmlhttp.responseText);
+                    myFunction(myArr);
+                }
+                
+                function myFunction(arr){
+                    var out = "<table>";
+                    var i;
+                    male = 0;
+                    female = 0;
+                        
+                    for(i=0; i < arr.length; i++){
+                        out += "<tr><td>" +
+                            arr[i].fname +
+                            "</td><td>" +
+                            arr[i].school +
+                            "</td><td>" +
+                            arr[i].address +
+                            "</td></tr>";
 
-<p>Click "Try it" to display the value of each element in the form.</p>
+                        
+                        var n = arr[i].male.localeCompare("YES");
+                        if (n == 0)
+                            male += 1;
+                        else
+                            female += 1;
+            
+                    }
+                    out += "</table>"        
+                    $("#button1").html(out)
+                    
+                    for (var i = 0; i < arr.length ; i++) {
+                        codeAddress(myArr[i].address);
+                    };
+                    
+                    drawChart(male, female);
+                    
+                }
+            });
+        });
+        xmlhttp.open("GET", url, true);
+        xmlhttp.send();
+        
+        var geocoder;
+        var map;   
+        function initialize() {
+            geocoder = new google.maps.Geocoder();
+            var mapOptions = {
+              center: { lat: 32.730468, lng: -97.114774},
+              zoom: 8
+            };
+            map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
+        }
+        
+        function codeAddress(address) {
+            
+            address = address.toString();
+            geocoder.geocode( { 'address': address}, function(results, status) {
+                if (status == google.maps.GeocoderStatus.OK) {
+                    map.setCenter(results[0].geometry.location);
+                    var marker = new google.maps.Marker({
+                        map: map,
+                        position: results[0].geometry.location
+                    });
+                } else {
+                    alert("Geocode was not successful for the following reason: " + status);
+                }
+            });
+        }
+        
+      
+      google.load('visualization', '1.0', {'packages':['corechart']});
 
-<button onclick="myFunction()">Try it</button>
+      
+      google.setOnLoadCallback(drawChart);
 
-<p id="demo"></p>
+      
+      function drawChart(males, females) {
 
-<script>
-function myFunction() {
-    var x = document.getElementById("frm1");
-    var text = "";
-    var i;
-    for (i = 0; i < x.length ;i++) {
-        text += x.elements[i].value + "<br>";
-    }
-    document.getElementById("demo").innerHTML = text;
-}
-</script>
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'male');
+        data.addColumn('number', 'person');
+        data.addRows([
+          ['Males', males],
+          ['Females', females],
+          
+        ]);
 
-</body>
+        // Set chart options
+        var options = {'title':'Gender % of people Sharan took photo with',
+                       'width':600,
+                       'height':300};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
+    </head>
+    <body onload="initialize()">
+        <p>  List of friends and location Sharan took photo with!! </p>
+        <p>  </p>
+        <button id="button1">Are You Ready?</button>
+        <p> </p>
+        <div id="map-canvas" style="width: 720px; height: 480px;"></div>
+        
+        <div id="chart_div"></div>
+    </body>
 </html>
