--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -128,12 +128,12 @@
       }
     </script>
     </head>
-    <body onload="initialize()">
+    <body onload="initialize()" bgcolor="#E6E6FA">
         <p>  List of friends and location Sharan took photo with!! </p>
         <button id="button1">Are You Ready?</button>
 		<p> </p>
-        <div id="map-canvas" style="width: 920px; height: 480px;"> </div>
+        <div id="map-canvas" style="float:left; width: 920px; height: 480px;"> </div>
         <p> </p>
-		<div id="chart_div"></div>
+		<div id="chart_div" style="float:right"></div>
     </body>
 </html>
