change name heroku

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
         <script type='text/javascript'>
         var xmlhttp = new XMLHttpRequest();
-        var url = "https://cse5335-1001117995.herokuapp.com/welcome/datasend";
+        var url = "https://pacific-taiga-4615.herokuapp.com/welcome/datasend";
         var myArr;
         var male ;
         var female;
