--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,7 +32,7 @@
 		// Reference: http://www.w3schools.com/json/json_http.asp
 		
 		var xmlhttp = new XMLHttpRequest();
-        var url = "https://pacific-taiga-4615.herokuapp.com/welcome/datasend";
+        var url = "https://cse5335-sxr7995.herokuapp.com/welcome/datasend";
         var myArr;
         var male ;
         var female;
