--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
                 background-color: #ffffff;
             }
             
-        </style>s
+        </style>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>        
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI77onKHBURMe_IFrsG1tpoeJk6Q_CC2o"> </script>
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
